--- a/frontend/styles/globals.css
+++ b/frontend/styles/globals.css
@@ -10,7 +10,7 @@
     @apply w-[80vw] max-w-xl;
   }
   .postButtons {
-    @apply flex items-center space-x-1 text-sm font-semibold text-[#65676B] px-10 py-1
+    @apply flex items-center justify-center w-full py-1 space-x-1 text-[12px]  lg:text-sm lg:py-2 font-semibold text-[#65676B]
      hover:bg-gray-100 cursor-pointer rounded-md;
   }
 }
