--- a/frontend/styles/imageSwiper.css
+++ b/frontend/styles/imageSwiper.css
@@ -30,6 +30,7 @@
   margin-top: 10px;
   margin-bottom: 6px;
 }
+
 .mySwiper .swiper-slide img {
   background-color: rgb(248, 248, 248);
   border-radius: 5px;
@@ -61,4 +62,12 @@
 .mySwiper2 .swiper-slide {
   width: 25%;
   height: 80%;
+}
+@media screen and (max-width: 600px) {
+  .mySwiper {
+    display: none;
+  }
+  .mySwiper2 .swiper-slide img {
+    height: 300px;
+  }
 }
