--- a/frontend/styles/imageSwiper.css
+++ b/frontend/styles/imageSwiper.css
@@ -58,11 +58,20 @@
   width: 100%;
   height: 400px;
   object-fit: contain;
+  cursor: pointer;
 }
 .mySwiper2 .swiper-slide {
   width: 25%;
   height: 80%;
 }
+
+.mySwiper3 .swiper-slide {
+  width: 25%;
+  height: 100%;
+
+  background-color: transparent;
+}
+
 @media screen and (max-width: 448px) {
   .mySwiper {
     display: none;
