--- a/frontend/styles/imageSwiper.css
+++ b/frontend/styles/imageSwiper.css
@@ -29,8 +29,8 @@
   box-sizing: border-box;
   margin-top: 10px;
   margin-bottom: 6px;
+  cursor: pointer;
 }
-
 .mySwiper .swiper-slide img {
   background-color: rgb(248, 248, 248);
   border-radius: 5px;
@@ -44,8 +44,52 @@
   height: 100%;
   opacity: 0.5;
 }
-
 .mySwiper .swiper-slide-thumb-active {
+  opacity: 1;
+}
+
+.swiperItems .swiper-wrapper {
+  display: flex;
+  align-items: center;
+}
+.swiperItems .swiper-button-next {
+  height: 100%;
+  width: 5%;
+  margin: 0;
+  top: 0;
+  right: 3px;
+}
+.swiperItems .swiper-button-prev {
+  height: 100%;
+  width: 5%;
+  margin: 0;
+  top: 0;
+  left: 3px;
+}
+.mySwiper2 .swiper-button-next {
+  height: 100%;
+  width: 5%;
+  margin: 0;
+  top: 0;
+  right: 3px;
+}
+.mySwiper2 .swiper-button-prev {
+  height: 100%;
+  width: 5%;
+  margin: 0;
+  top: 0;
+  left: 3px;
+}
+
+.myItemSwiper {
+  height: 20%;
+  box-sizing: border-box;
+  margin-top: 10px;
+  margin-bottom: 6px;
+  cursor: pointer;
+}
+
+.myItemSwiper .swiper-slide-thumb-active {
   opacity: 1;
 }
 
@@ -71,12 +115,36 @@
 
   background-color: transparent;
 }
+@media screen and (max-width: 700px) {
+  .swiperItems .swiper-button-prev::after {
+    font-size: larger;
+  }
+  .swiperItems .swiper-button-next::after {
+    font-size: larger;
+  }
+}
 
 @media screen and (max-width: 448px) {
   .mySwiper {
     display: none;
   }
+  .myItemSwiper {
+    display: none;
+  }
+
   .mySwiper2 .swiper-slide img {
-    height: 300px;
+    height: 250px;
+  }
+  .mySwiper2 .swiper-button-prev::after {
+    font-size: medium;
+  }
+  .mySwiper2 .swiper-button-next::after {
+    font-size: medium;
+  }
+  .swiperItems .swiper-button-prev::after {
+    font-size: medium;
+  }
+  .swiperItems .swiper-button-next::after {
+    font-size: medium;
   }
 }
