--- a/frontend/styles/imageSwiper.css
+++ b/frontend/styles/imageSwiper.css
@@ -36,7 +36,7 @@
   border-radius: 5px;
   display: block;
   width: 100%;
-  height: 120px;
+  height: 100px;
   object-fit: cover;
 }
 .mySwiper .swiper-slide {
@@ -106,6 +106,7 @@
   height: 400px;
   object-fit: contain;
   cursor: pointer;
+  margin-bottom: 10px;
 }
 .mySwiper2 .swiper-slide {
   width: 25%;
